--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage": "^1.1.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "~1.1.0",
